generated-tests/tests/snapshots/rust/test_generated_type_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
type TestType1 = i32;

AST:
(source_file
  (type_item
    (type_identifier)
    (primitive_type)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestType1",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 15,
            },
            definition_type: TypeDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
