generated-tests/tests/snapshots/rust/test_generated_unary_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
-value10

AST:
(source_file
  (ERROR
    (unary_expression
      (identifier "value10")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value10",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 2,
                end_line: 1,
                end_column: 9,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
