generated-tests/tests/snapshots/rust/test_generated_use_declaration.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
use module::Item1;

AST:
(source_file
  (use_declaration
    (scoped_identifier
      (identifier module)
      (identifier Item1)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Item1",
            line_number: 1,
            definition_type: ModuleDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "module",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 11,
        },
        SerializableUsage {
            name: "Item1",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 13,
            end_line: 1,
            end_column: 18,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
