generated-tests/tests/snapshots/rust/test_generated_while_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
while let Some(val4) = opt2 { break; }

AST:
(source_file
  (expression_statement
    (while_expression
      condition: (let_condition
        pattern: (tuple_struct_pattern
          type: (identifier "Some")
          (identifier "val4")
        )
        value: (identifier "opt2")
      )
      body: (block
        (expression_statement
          (break_expression)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "val4",
            position: Position {
                start_line: 1,
                start_column: 16,
                end_line: 1,
                end_column: 20,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Some",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 15,
            },
        },
        Usage {
            name: "val4",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 16,
                end_line: 1,
                end_column: 20,
            },
        },
        Usage {
            name: "opt2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 24,
                end_line: 1,
                end_column: 28,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
