generated-tests/tests/snapshots/rust/test_generated_yield_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
yield value11

AST:
(source_file
  (ERROR
    (yield_expression
      (identifier value11)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value11",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
